login + auth midway

--- a/src/app/book/book.html
+++ b/src/app/book/book.html
@@ -1,2 +1,8 @@
+<navbar></navbar>
+
+<div class="row" ng-controller="WishlistController">
+  <button class="btn btn-success btn-lg pull-right" ng-click="openWishlist($event)">WishList</button>
+</div>
+
 
   <selected-book book="book"></selected-book>
